[tool.poetry]
name = "swaggerextractorpy"
version = "0.1.0"
description = "Utility to export Swagger api endpoints into excel or csv"
authors = ["ShanKonduru <ShanKonduru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py2swagger = "^1.0.0"
pandas = "^2.2.2"
xlwt = "^1.3.0"
requests = "^2.31.0"
flask = "^3.0.3"
swagger-parser = "^1.0.2"

[tool.poetry.group.dev.dependencies]
xlwt = "^1.3.0"
pandas = "^2.2.2"
py2swagger = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
